# ml_refactoring_lecture

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.cfg
configs/: train.yaml
src/: config.py  constants.py  datamodule.py  dataset.py  lightning_module.py  logger.py  metrics.py  model.py  schedulers.py  train.py  transform.py
src/callabacks/: experiment_tracking.py
src/callbacks/: debug.py  experiment_tracking.py
tests/sanity/: conftest.py  test_train.py
